Refactor App and RotatingCircles components by removing unused CSS file, adjusting default parameters, and enhancing shadow effects for improved visual presentation.

--- a/src/components/RotatingCircles.css
+++ b/src/components/RotatingCircles.css
@@ -26,6 +26,10 @@
   --circle-color-6: #DB9F1FC4;
 }
 
+.shadow-blur {
+  filter: blur(40px) !important;
+}
+
 .circles-root {
   position: fixed;
   top: 50%;
@@ -38,6 +42,7 @@
   overflow: hidden;
   background-color: transparent;
   filter: blur(var(--circle-mask-blur));
+  isolation: isolate;
 }
 
 .circles-container {
